@@ -254,3 +254,5 @@ Version: V0.1B59 Date: Thu May 17 15:40:24 2003 +++++++++++++++++++++++++++++++
 Version: V0.1B59 Date: Sun May 18 11:03:48 2003 +++++++++++++++++++++++++++++++
 + qextmdi added
 + some changes in close flow, still not finished
++ fix close stuff!
+
